...
      }
    },
    "Last connected: %@": {
      "comment": "A sublabel inside the list item, showing the relative time since the last connection to a device. The text inside the parentheses is a placeholder that should be replaced with the actual relative time.",
      "isCommentAutoGenerated": true
    },
    "Library": {
      "extractionState": "manual",
      "localizations": {
        "en": {
          "stringUnit": {
            "state": "translated",
            "value": "Library"
...
            "state": "translated",
            "value": "管理 Tailnet 節點"
          }
        }
      }
    },
    "Manual Connect": {
      "extractionState": "manual",
      "localizations": {
        "en": {
          "stringUnit": {
            "state": "translated",
            "value": "Manual Connect"
...
            "state": "translated",
            "value": "與現有資料合併"
          }
        }
      }
    },
    "Message": {
      "extractionState": "manual",
      "localizations": {
        "en": {
          "stringUnit": {
            "state": "translated",
            "value": "Message"
...
